--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "dev",
+	"require-dev": {
+		"way/generators": "2.*"
+	}
 }
